Remove eslint and mocha

--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
 	"displayName": "NBT",
 	"description": "NBT Editor for VSCode",
 	"version": "0.0.1",
-    "enableProposedApi": true,
+	"publisher": "Misode",
+	"enableProposedApi": true,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/misode/vscode-nbt.git"
+	},
 	"engines": {
 		"vscode": "^1.42.0"
 	},
@@ -44,15 +49,9 @@
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
-		"@types/mocha": "^7.0.1",
 		"@types/node": "^12.11.7",
 		"@types/vscode": "^1.42.0",
-		"eslint": "^6.8.0",
-		"@typescript-eslint/parser": "^2.18.0",
-		"@typescript-eslint/eslint-plugin": "^2.18.0",
 		"glob": "^7.1.6",
-		"mocha": "^7.0.1",
-		"typescript": "^3.7.5",
-		"vscode-test": "^1.3.0"
+		"typescript": "^3.7.5"
 	}
 }
