--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nbt",
+	"name": "vscode-nbt",
 	"displayName": "NBT",
 	"description": "NBT Editor for VSCode",
 	"version": "0.0.1",
@@ -10,14 +10,14 @@
 		"url": "https://github.com/misode/vscode-nbt.git"
 	},
 	"engines": {
-		"vscode": "^1.42.0"
+		"vscode": "^1.46.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"activationEvents": [
 		"onCommand:extension.helloWorld",
-		"onWebviewEditor:nbtEditor.nbt"
+		"onCustomEditor:nbtEditor.nbt"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -27,15 +27,16 @@
 				"title": "Hello World"
 			}
 		],
-		"webviewEditors": [
+		"customEditors": [
 			{
 				"viewType": "nbtEditor.nbt",
-				"displayName": "NBT Data",
+				"displayName": "NBT Viewer",
 				"selector": [
 					{
 						"filenamePattern": "*.nbt"
 					}
-				]
+				],
+				"priority": "default"
 			}
 		]
 	},
@@ -48,10 +49,15 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/glob": "^7.1.1",
-		"@types/node": "^12.11.7",
-		"@types/vscode": "^1.42.0",
-		"glob": "^7.1.6",
-		"typescript": "^3.7.5"
+		"@types/node": "^12.12.0",
+		"@types/vscode": "^1.46.0",
+		"@typescript-eslint/eslint-plugin": "^3.0.2",
+		"@typescript-eslint/parser": "^3.0.2",
+		"eslint": "^7.1.0",
+		"typescript": "^3.9.4"
+	},
+	"dependencies": {
+		"nbt": "^0.8.1",
+		"node-gzip": "^1.1.2"
 	}
 }
