--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "vscode-nbt",
 	"displayName": "NBT Viewer",
-	"description": "NBT Viewer for VSCode (WIP)",
+	"description": "View Minecraft NBT and structure files",
 	"version": "0.0.4",
-	"publisher": "Misode",
+	"publisher": "Misodee",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/misode/vscode-nbt.git"
@@ -15,7 +15,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCustomEditor:nbtEditor.nbt"
+		"onCustomEditor:nbtEditor.nbt",
+		"onCustomEditor:nbtEditor.structure3D"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -34,27 +35,43 @@
 						"filenamePattern": "*.mca"
 					}
 				],
+				"priority": "option"
+			},
+			{
+				"viewType": "nbtEditor.structure3D",
+				"displayName": "3D Structure Preview",
+				"selector": [
+					{
+						"filenamePattern": "**/structures/**/*.nbt"
+					}
+				],
 				"priority": "default"
 			}
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"lint": "eslint src --ext ts",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"test": "node ./out/test/runTest.js"
+		"vscode:prepublish": "npm run genAssets && npm run buildEditor && npm run build",
+		"genAssets": "ts-node src/GenerateAssets.ts",
+		"build": "tsc -p ./",
+		"watch": "tsc -w -p ./",
+		"buildEditor": "cd structure3d && npm run build && cd ..",
+		"watchEditor": "cd structure3d && npm run watch"
 	},
 	"devDependencies": {
+		"@types/adm-zip": "^0.4.33",
 		"@types/node": "^12.12.0",
+		"@types/node-fetch": "^2.5.7",
+		"@types/pngjs": "^3.4.2",
 		"@types/vscode": "^1.46.0",
-		"@typescript-eslint/eslint-plugin": "^3.0.2",
-		"@typescript-eslint/parser": "^3.0.2",
-		"eslint": "^7.1.0",
+		"adm-zip": "^0.5.1",
+		"node-fetch": "^2.6.1",
+		"pngjs": "^6.0.0",
+		"ts-node": "^9.1.1",
 		"typescript": "^3.9.4"
 	},
 	"dependencies": {
+		"@webmc/core": "^0.1.0",
+		"@webmc/render": "^0.2.1",
 		"nbt": "^0.8.1",
 		"node-gzip": "^1.1.2"
 	}
