--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,7 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "Watch Extension",
 			"type": "npm",
 			"script": "watch",
 			"problemMatcher": "$tsc-watch",
@@ -11,9 +12,20 @@
 			"presentation": {
 				"reveal": "never"
 			},
+			"dependsOn": "Watch Editor",
 			"group": {
 				"kind": "build",
 				"isDefault": true
+			}
+		},
+		{
+			"label": "Watch Editor",
+			"type": "npm",
+			"script": "watchEditor",
+			"problemMatcher": "$ts-webpack-watch",
+			"isBackground": true,
+			"presentation": {
+				"reveal": "never"
 			}
 		}
 	]
