--- a/editor/package.json
+++ b/editor/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "webpack-cli -p",
-    "watch": "webpack-cli -p -w"
+    "watch": "webpack-cli -p -w --info-verbosity verbose"
   },
   "devDependencies": {
     "ts-loader": "^7.0.4",
@@ -12,7 +12,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@webmc/core": "0.0.1",
-    "@webmc/render": "0.0.1"
+    "@webmc/core": "0.1.0",
+    "@webmc/render": "0.2.1"
   }
 }
