--- a/editor/tsconfig.json
+++ b/editor/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "module": "commonjs"
+		"module": "commonjs",
+		"strictNullChecks": true
 	},
 	"include": [
 		"src"
