--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
 	"compilerOptions": {
+		"target": "es2017",
 		"module": "commonjs",
-		"target": "es6",
 		"outDir": "out",
-		"lib": [
-			"es6"
-		],
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true,
-		"resolveJsonModule": true
+		"strictNullChecks": true
 	},
 	"include": [
 		"src"
