--- a/editor/package.json
+++ b/editor/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@webmc/core": "^0.2.0",
     "@webmc/nbt": "^0.1.1",
-    "@webmc/render": "^0.4.1"
+    "@webmc/render": "^0.4.1",
+    "vscode-codicons": "0.0.14"
   }
 }
