Optimize structure renderer, add culling

--- a/editor/tsconfig.json
+++ b/editor/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2017",
 		"module": "commonjs",
-		"strictNullChecks": true
+		"strictNullChecks": true,
+		"resolveJsonModule": true
 	},
 	"include": [
 		"src"
