--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
 					},
 					{
 						"filenamePattern": "*.mca"
+					},
+					{
+						"filenamePattern": "*.mcstructure"
 					}
 				],
 				"priority": "default"
@@ -60,6 +63,6 @@
 		"typescript": "^3.9.4"
 	},
 	"dependencies": {
-		"@webmc/nbt": "^0.1.1"
+		"@webmc/nbt": "^0.2.1"
 	}
 }
