Add schematic file support (#6)
* Add schematic file support

--- a/package.json
+++ b/package.json
@@ -36,6 +36,15 @@
 					},
 					{
 						"filenamePattern": "*.mcstructure"
+					},
+					{
+						"filenamePattern": "*.schematic"
+					},
+					{
+						"filenamePattern": "*.litematic"
+					},
+					{
+						"filenamePattern": "*.schem"
 					}
 				],
 				"priority": "default"
