--- a/package.json
+++ b/package.json
@@ -65,26 +65,26 @@
 	},
 	"dependencies": {
 		"deepslate": "^0.8.0",
-		"gl-matrix": "^3.3.0",
-		"vscode-codicons": "0.0.14"
+		"gl-matrix": "^3.4.3",
+		"vscode-codicons": "^0.0.14"
 	},
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^20.0.0",
-		"@rollup/plugin-node-resolve": "^13.0.4",
-		"@rollup/plugin-typescript": "^8.2.5",
-		"@types/adm-zip": "^0.4.33",
-		"@types/node": "^12.12.0",
-		"@types/node-fetch": "^2.5.7",
+		"@rollup/plugin-node-resolve": "^13.0.6",
+		"@rollup/plugin-typescript": "^8.3.0",
+		"@types/adm-zip": "^0.4.34",
+		"@types/node": "^12.20.37",
+		"@types/node-fetch": "^2.5.12",
 		"@types/pngjs": "^3.4.2",
-		"@types/vscode": "^1.46.0",
-		"@typescript-eslint/eslint-plugin": "^4.25.0",
-		"@typescript-eslint/parser": "^4.25.0",
-		"adm-zip": "^0.5.1",
-		"eslint": "^7.27.0",
-		"node-fetch": "^2.6.1",
+		"@types/vscode": "^1.62.0",
+		"@typescript-eslint/eslint-plugin": "^5.3.1",
+		"@typescript-eslint/parser": "^5.3.1",
+		"adm-zip": "^0.5.9",
+		"eslint": "^8.2.0",
+		"node-fetch": "^2.6.6",
 		"pngjs": "^6.0.0",
-		"rollup": "^2.56.2",
-		"ts-node": "^9.1.1",
-		"typescript": "^3.9.4"
+		"rollup": "^2.59.0",
+		"ts-node": "^10.4.0",
+		"typescript": "^4.4.4"
 	}
 }
