--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": false,
-		"strictNullChecks": true
+		"strictNullChecks": true,
+    "jsx": "react",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment"
 	},
 	"ts-node": {
     "compilerOptions": {
