Fix #20 Add dat_old extension

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
 						"filenamePattern": "*.dat"
 					},
 					{
+						"filenamePattern": "*.dat_old"
+					},
+					{
 						"filenamePattern": "*.mca"
 					},
 					{
