--- a/package.json
+++ b/package.json
@@ -61,13 +61,14 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run genAssets && npm run build",
-		"genAssets": "ts-node scripts/GenerateAssets.ts",
 		"build": "rollup --config",
 		"dev": "rollup --config --watch",
 		"lint": "eslint . --ext .ts"
 	},
 	"dependencies": {
 		"deepslate": "^0.8.0",
+		"env-paths": "^3.0.0",
+		"follow-redirects": "^1.14.8",
 		"gl-matrix": "^3.4.3",
 		"vscode-codicons": "^0.0.14"
 	},
@@ -75,17 +76,12 @@
 		"@rollup/plugin-commonjs": "^20.0.0",
 		"@rollup/plugin-node-resolve": "^13.0.6",
 		"@rollup/plugin-typescript": "^8.3.0",
-		"@types/adm-zip": "^0.4.34",
-		"@types/node": "^12.20.37",
-		"@types/node-fetch": "^2.5.12",
-		"@types/pngjs": "^3.4.2",
+		"@types/follow-redirects": "^1.14.0",
+		"@types/node": "^14.14.37",
 		"@types/vscode": "^1.46.0",
 		"@typescript-eslint/eslint-plugin": "^5.3.1",
 		"@typescript-eslint/parser": "^5.3.1",
-		"adm-zip": "^0.5.9",
 		"eslint": "^8.2.0",
-		"node-fetch": "^2.6.6",
-		"pngjs": "^6.0.0",
 		"rollup": "^2.59.0",
 		"ts-node": "^10.4.0",
 		"typescript": "^4.4.4"
