--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"lint": "eslint . --ext .ts"
 	},
 	"dependencies": {
+		"deepslate": "0.14.0-beta.1",
 		"env-paths": "^2.2.1",
 		"follow-redirects": "^1.14.8",
 		"gl-matrix": "^3.4.3",
