--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
 	"[typescript]": {
 		"editor.codeActionsOnSave": {
-			"source.organizeImports": true,
-			"source.fixAll.eslint": true
+			"source.organizeImports": "explicit",
+			"source.fixAll.eslint": "explicit"
 		}
 	},
 	"[javascript]": {
 		"editor.codeActionsOnSave": {
-			"source.organizeImports": true,
-			"source.fixAll.eslint": true
+			"source.organizeImports": "explicit",
+			"source.fixAll.eslint": "explicit"
 		}
 	},
 	"editor.insertSpaces": false
